[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["Ibrahim Bader <ebraheem1996@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
lab = "^7.0"
pandas = "^1.3.4"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
